--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../Webb24-JS1_API-Danial-Ashouri/css/style.css">
     <title>API Danial Ashouri</title>
 </head>
 
@@ -23,6 +23,6 @@
     <div class="user-container" id="user-container"></div>
 
 
-<script src="/js/script.js"></script>
+<script src="../Webb24-JS1_API-Danial-Ashouri/js/script.js"></script>
 </body>
 </html>
